# ia-claude

./: .gitignore  ARCHITECTURE.md  CONSTITUTION.md  CONTRIBUTING.md  PREMISE.md  README.md  STUDY_GUIDE.md  pyproject.toml  tessl.json
.agents/skills/: tessl__iikit-00-constitution  tessl__iikit-08-taskstoissues
.claude/skills/: tessl__iikit-01-specify  tessl__iikit-03-checklist  tessl__iikit-04-testify
.gemini/skills/: tessl__iikit-02-plan  tessl__iikit-05-tasks  tessl__iikit-06-analyze  tessl__iikit-clarify
.github/skills/: tessl__iikit-07-implement  tessl__iikit-bugfix  tessl__iikit-core
.github/workflows/: architect-review.yml  assertion-integrity.yml  quality.yml
.specify/: active-feature  context.json  dashboard.html  score-history.json
.tessl/: RULES.md
config/: policy.json
katas/: __init__.py
katas/_shared/: __init__.py  bootstrap.py  eventlog.py
katas/kata_001_agentic_loop/: README.md  __init__.py  client.py  events.py  loop.py  models.py  notebook.ipynb  replay.py  runner.py  session.py  tools.py
katas/kata_002_pretool_guardrails/: __init__.py  errors.py  escalation.py  events.py  hook.py  models.py  notebook.ipynb  policy.py  prompts.py  refund_api_stub.py  runner.py
katas/kata_003_posttool_normalize/: notebook.ipynb
katas/kata_004_subagent_isolation/: notebook.ipynb
katas/kata_005_defensive_extraction/: notebook.ipynb
katas/kata_006_mcp_errors/: notebook.ipynb
katas/kata_007_plan_mode/: notebook.ipynb
katas/kata_008_claude_md_memory/: notebook.ipynb
katas/kata_009_path_rules/: notebook.ipynb
katas/kata_010_prefix_caching/: notebook.ipynb
katas/kata_011_softmax_mitigation/: notebook.ipynb
katas/kata_012_prompt_chaining/: notebook.ipynb
katas/kata_013_headless_ci_review/: notebook.ipynb
katas/kata_014_few_shot_calibration/: notebook.ipynb
katas/kata_015_self_correction/: notebook.ipynb
katas/kata_016_human_handoff/: notebook.ipynb
katas/kata_017_batch_processing/: notebook.ipynb
katas/kata_018_scratchpad_persistence/: notebook.ipynb
katas/kata_019_adaptive_investigation/: notebook.ipynb
katas/kata_020_data_provenance/: notebook.ipynb
katas/kata_021_tool_descriptions/: notebook.ipynb
katas/kata_022_mcp_config/: notebook.ipynb
katas/kata_023_builtin_tools/: notebook.ipynb
katas/kata_024_slash_commands_skills/: notebook.ipynb
katas/kata_025_session_management/: notebook.ipynb
katas/kata_026_validation_retry/: notebook.ipynb
katas/kata_027_multi_pass_review/: notebook.ipynb
katas/kata_028_multi_agent_errors/: notebook.ipynb
katas/kata_029_confidence_calibration/: notebook.ipynb
katas/kata_030_explicit_criteria/: notebook.ipynb
scripts/: build_study_guide.py  install-hooks.sh  study_guide.css
specs/: README.md
specs/001-agentic-loop/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-agentic-loop/checklists/: requirements.md
specs/001-agentic-loop/contracts/: event-log-record.schema.json  tool-definition.schema.json  tool-result.schema.json
specs/002-pretool-guardrails/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-pretool-guardrails/checklists/: requirements.md
specs/002-pretool-guardrails/contracts/: escalation-event.schema.json  hook-verdict.schema.json  (+3 more)
specs/003-posttool-normalize/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-subagent-isolation/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/005-defensive-extraction/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/006-mcp-errors/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/007-plan-mode/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/008-claude-md-memory/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/009-path-rules/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/010-prefix-caching/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/011-softmax-mitigation/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/012-prompt-chaining/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/013-headless-ci-review/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/014-few-shot-calibration/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/015-self-correction/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/016-human-handoff/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/017-batch-processing/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/018-scratchpad-persistence/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/019-adaptive-investigation/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/020-data-provenance/: analysis.md  context.json  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/021-tool-descriptions/: spec.md
specs/022-mcp-config/: spec.md
specs/023-builtin-tools/: spec.md
specs/024-slash-commands-skills/: spec.md
specs/025-session-management/: spec.md
specs/026-validation-retry/: spec.md
specs/027-multi-pass-review/: spec.md
specs/028-multi-agent-errors/: spec.md
specs/029-confidence-calibration/: spec.md
specs/030-explicit-criteria/: spec.md
specs/_templates/: kata-readme.md  notebook-template.ipynb
(+263 files in other folders)
