# Workshop Python config — kept intentionally minimal.
# Dependencies are present so that exploratory snippets (notebooks, REPL)
# can import the Anthropic SDK and pydantic without per-kata setup.

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "ia-claude"
version = "0.2.0"
description = "Concept-first kata workshop for Claude Certified Architect prep."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    "anthropic>=0.40",
    "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "jupyter>=1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["katas"]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = [".tessl", "specs/_templates", "**/notebook.ipynb"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
